[package]
name = "subversive"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
poc = []

[lib]
name = "subversive"
path = "src/lib.rs"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
allow-expect-in-tests = "allow"

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
sha3 = "0.10"
sha2 = "0.10"
rsa = "0.9"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
ripemd = "0.2.0-rc.5"
slogger = "0.1.1"
base_xx = "0.6.1"

