[package]
name = "subversive"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
poc = []

[lib]
name = "subversive"
path = "src/lib.rs"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
allow-expect-in-tests = "allow"

[dependencies]
tokio = { version = "1", features = ["full"] }
slogger = "0.1.2"
base_xx = "0.7.0"
slahasher = "0.3.12"
simple_sign = "0.1.2"
chrono = "0.4.26"

