[package]
name = "subversive-network"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
igd = { version = "0.12", features = ["aio"] }
local-ip-address = "0.5"
dns-lookup = "2.0.4"
async-trait = "0.1.88"
tracing = "0.1"
serde_json = "1.0"

[dev-dependencies]
mockall = "0.13.1"
tempfile = "3.2"
mockito = "1.2"
