[package]
name = "subversive-network"
version = "0.1.0"
edition = "2021"

[dependencies]
subversive-types = { path = "../types" }
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"

[dev-dependencies]
mockall = "0.13.1"
tempfile = "3.2"
mockito = "1.2"
