[package]
name = "subversive-types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1.41"
rand = "0.9.0"
anyhow = "1.0.97"
clap = { version = "4.5.36", features = ["derive"] }
serde_yaml = "0.9"
subversive-utils = { path = "../utils" }

[dev-dependencies]
tempfile = "3.10"
